fix adjustments to the flexbox of index css and aligned text on guess css

--- a/guess.css
+++ b/guess.css
@@ -84,9 +84,10 @@ form {
     flex-direction: column;
 
     margin: auto;
-    max-width: 300px;
+    max-width: 100%;
     padding: 10px 20px;
     gap: 10px;
+    align-items: center;
 }
 .input_container {
     font-size: 1rem;
