--- a/index.css
+++ b/index.css
@@ -15,14 +15,17 @@ body {
 
     display: flex;
     flex-direction: column;
+    margin: 0;
+    height: 100vh;
 
     background-color: #91a995;
 }
 
 /* The HEADER block of the HTML */
 header {
+    flex: 0 80px;
+
     text-align: left;
-    width: 100%;
     padding: 10px 20px;
     background-color: #177339;
 }
@@ -57,6 +60,7 @@ header h1 {
 /* The MAIN block of the HTML */
 main {
     flex: 1;
+    flex-direction: row;
 }
 main h1{
     padding-bottom: 25px;
@@ -142,9 +146,10 @@ button:hover {
 
 /* The FOOTER block of the HTML */
 footer {
-    text-align: left;
+    flex: 0 30px;
+    text-align: center;
 
-    position: fixed;
+    /* position: fixed; */
     padding: 10px 20px;
     width: 100%;
     bottom: 0;
@@ -192,3 +197,18 @@ footer a:hover {
         transform: translateX(0%);
     }
   } */
+
+@media (orientation: portrait) {
+    main {
+        flex-direction: column;
+    }
+}
+  
+@media (max-height: 700px) {
+    header {
+        display: none;
+    }
+    footer {
+        display: none;
+    }
+}
